fixed navbar from jumping down to the next line

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -261,5 +261,6 @@ svg {
   
   .flex-row-nav {
     margin-top: 3.3rem;
+    padding-left: 45%;
   }
 }
